--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -57,10 +57,10 @@
 <body>
     <div class="tarjeta">
         <div class="corazones">❤️❤️❤️</div>
-        <h1>Feliz San Valentín, mi amor! ❤️</h1>
+        <h1>hola, mi amor! ❤️</h1>
         <p>Desde que te conocí, mi vida se llenó de alegría y amor.  
         Eres mi persona favorita y mi mayor felicidad.  
-        Te amo con todo mi corazón para mi princesa hermosa Onaidy. ATT RAI. 💕</p>
+        Te amo con todo mi corazón para mi princesa hermosa Leorki. ATT RAI. 💕</p>
         <a href="https://youtu.be/wGzdiNAMbTI?si=GjFD9MM7oJxIOVVA" class="boton" target="_blank">Un Mensaje Especial</a>
     </div>
 </body>
